Add macOS support for live packet capture and update README with usage instructions